--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
+      <img src="images/me.jpeg" alt="Markie's profile picture" class="profile-image">
       <h1 class="tag name">Hello, I’m Markie.</h1>
       <p class="tag location">My home is Daly City, California.</p>
     </header>
