--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Markie idea</li>
+          <li class="name">Markie idea | Web Developer</li>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 
-    <header>
+    <header class="main">
       <img src="images/me.jpg" alt="Markie's profile picture" class="profile-image">
       <h1 class="tag name">Hello, I’m Markie.</h1>
       <p class="tag location">My home is Daly City, California.</p>
@@ -25,8 +25,8 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I’m an aspiring web developer who loves everything about the web. I enjoy traveling and meeting new people. It keeps life fascinating and inspires me to create interesting projects.</p>
+        <p>When I'm not dreaming about code, I train Muay Thai and Brazilian Jiu Jitsu at FTCC. I enjoy these martial arts because there are so many styles. It also challenge me mentally and physically. </p>
       </div> 
 
       <div class="card">
@@ -36,8 +36,7 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>Frameworks</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div> 
@@ -45,11 +44,11 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/markieidea" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/markieidea" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/markieidea" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2016, Markie Idea</p>
     </footer>
   </body>
   </html>
