Added different header bg pics

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
         <ul class="nav">
           <li class="name">Markie idea | Web Developer</li>
           <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
     </div>
@@ -25,8 +26,8 @@
     <main class="flex">
       <div class="card">
         <h2>General Information</h2>
-        <p>I’m currently on track to become a job-ready web developer.</p>
-        <p>If you have any interest in connecting, please reach out via email: <a href="mailto:markieidea@gmail.com">markieidea@gmail.com</a></p>
+        <p>I’m currently on track to become a job-ready web developer through the Treehouse Techdegree program.</p>
+        <p>If you're interested in connecting, please reach out via email: <a href="mailto:markieidea@gmail.com">markieidea@gmail.com</a></p>
       </div> 
 
     </main>
