--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul class="nav">
           <li class="name">Markie idea | Web Developer</li>
           <li><a href="#">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
@@ -26,7 +27,7 @@
       <div class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web developer who loves everything about the web. I enjoy traveling and meeting new people. It keeps life fascinating and inspires me to create interesting projects.</p>
-        <p>When I'm not dreaming about code, I train Muay Thai and Brazilian Jiu Jitsu at FTCC. I enjoy these martial arts because there are so many styles. It also challenge me mentally and physically. </p>
+        <p>When I'm not dreaming about code, I train Muay Thai and Brazilian Jiu Jitsu because it challenges me mentally and physically.</p>
       </div> 
 
       <div class="card">
@@ -38,7 +39,7 @@
           <li>JavaScript</li>
           <li>Frameworks</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d like to work for a startup or small company that provides room for professional growth.</p>
       </div> 
 
     </main>
